--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my fast repo</title>
+    <link rel="stylesheet" href="css.css">
 </head>
 <body>
-    
+    <h1 class="png">My fast repo </h1>
+    <h3>my second repo</h3>
+    <P id="top">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, debitis?</P>
 </body>
 </html>
